[MODORDERS-1321]. Add 'Suppress from discovery' toggle for instance interaction